// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransferTopTrumps /> UI renders correctly when errored 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransferTopTrumps
    cardScreen={
      Object {
        "currentClub": "Current Club",
        "estFee": "Est. Fee",
        "playerAge": "Age",
        "pos": "Pos.",
      }
    }
    introScreen={
      Object {
        "headline": "Transfer Top Trumps",
        "introCopy": "Choose the players you would like your club to sign",
        "introHeadline": "How to play",
        "no": "Tap/Click for 'No'",
        "playBtn": "Play now",
        "subHeadline": "Who will you choose?",
        "yes": "Tap/Click for 'Yes'",
      }
    }
    players={
      Array [
        Object {
          "age": 29,
          "club": "Chelsea",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/chelsea_@2x.png",
          "fee": "£60m",
          "fname": "",
          "id": "willian",
          "idx": 0,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/WILLIAN_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/WILLIAN_mobile_@2x.jpg",
          "position": "CAM",
          "sName": "Willian",
        },
        Object {
          "age": 27,
          "club": "Juventus",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/juventus_@2x1.png",
          "fee": "£60m",
          "fname": "Alex",
          "id": "a_sandro",
          "idx": 1,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/SANDRO_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/SANDRO_mobile_@2x.jpg",
          "position": "LB",
          "sName": "Sandro",
        },
        Object {
          "age": 23,
          "club": "SS Lazio",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/lazio_@2x1.png",
          "fee": "£70m",
          "fname": "Sergej",
          "id": "s_m_savic",
          "idx": 2,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/MILINKOVIC-SAVIC_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/MILINKOVIC-SAVIC_mobile_@2x.jpg",
          "position": "CM",
          "sName": "Milinković-Savić",
        },
      ]
    }
    resultsScreen={
      Object {
        "exitUrl": "https://www.thesun.co.uk/sport/football/team/1196656/manchester-united/",
        "headline": "Transfer Top Trumps",
        "playBtn": "Club news",
        "sectionHeading": "Leaderboard",
        "subHeadline": "The results",
      }
    }
    targetClub={
      Object {
        "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
        "id": "man-utd",
        "name": "Man Utd",
        "teamColours": "#a81507",
      }
    }
    theme={
      Object {
        "primary": "#000000",
        "secondary": "#ffffff",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "backgroundColour": "#ffffff",
      "theme": Object {
        "primary": "#eb1701",
        "secondary": "#a5171c",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "backgroundColour": "#ffffff",
        "theme": Object {
          "primary": "#eb1701",
          "secondary": "#a5171c",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<TransferTopTrumps /> UI renders correctly when not errored 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TransferTopTrumps
    cardScreen={
      Object {
        "currentClub": "Current Club",
        "estFee": "Est. Fee",
        "playerAge": "Age",
        "pos": "Pos.",
      }
    }
    introScreen={
      Object {
        "headline": "Transfer Top Trumps",
        "introCopy": "Choose the players you would like your club to sign",
        "introHeadline": "How to play",
        "no": "Tap/Click for 'No'",
        "playBtn": "Play now",
        "subHeadline": "Who will you choose?",
        "yes": "Tap/Click for 'Yes'",
      }
    }
    players={
      Array [
        Object {
          "age": 29,
          "club": "Chelsea",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/chelsea_@2x.png",
          "fee": "£60m",
          "fname": "",
          "id": "willian",
          "idx": 0,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/WILLIAN_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/WILLIAN_mobile_@2x.jpg",
          "position": "CAM",
          "sName": "Willian",
        },
        Object {
          "age": 27,
          "club": "Juventus",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/juventus_@2x1.png",
          "fee": "£60m",
          "fname": "Alex",
          "id": "a_sandro",
          "idx": 1,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/SANDRO_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/SANDRO_mobile_@2x.jpg",
          "position": "LB",
          "sName": "Sandro",
        },
        Object {
          "age": 23,
          "club": "SS Lazio",
          "clubBadge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/lazio_@2x1.png",
          "fee": "£70m",
          "fname": "Sergej",
          "id": "s_m_savic",
          "idx": 2,
          "imageDesktop": "https://www.thesun.co.uk/wp-content/uploads/2018/07/MILINKOVIC-SAVIC_desktop_@2x.jpg",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/07/MILINKOVIC-SAVIC_mobile_@2x.jpg",
          "position": "CM",
          "sName": "Milinković-Savić",
        },
      ]
    }
    resultsScreen={
      Object {
        "exitUrl": "https://www.thesun.co.uk/sport/football/team/1196656/manchester-united/",
        "headline": "Transfer Top Trumps",
        "playBtn": "Club news",
        "sectionHeading": "Leaderboard",
        "subHeadline": "The results",
      }
    }
    targetClub={
      Object {
        "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
        "id": "man-utd",
        "name": "Man Utd",
        "teamColours": "#a81507",
      }
    }
    theme={
      Object {
        "primary": "#000000",
        "secondary": "#ffffff",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Unknown
          className="ttt-intro-screen"
          headline="Transfer Top Trumps"
          introCopy="Choose the players you would like your club to sign"
          introHeadline="How to play"
          no="Tap/Click for 'No'"
          onStartGame={[Function]}
          playBtn="Play now"
          subHeadline="Who will you choose?"
          targetClub={
            Object {
              "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
              "id": "man-utd",
              "name": "Man Utd",
              "teamColours": "#a81507",
            }
          }
          theme={
            Object {
              "primary": "#000000",
              "secondary": "#ffffff",
            }
          }
          yes="Tap/Click for 'Yes'"
        />,
        false,
        false,
      ],
      "className": "ttt-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "ttt-intro-screen",
          "headline": "Transfer Top Trumps",
          "introCopy": "Choose the players you would like your club to sign",
          "introHeadline": "How to play",
          "no": "Tap/Click for 'No'",
          "onStartGame": [Function],
          "playBtn": "Play now",
          "subHeadline": "Who will you choose?",
          "targetClub": Object {
            "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
            "id": "man-utd",
            "name": "Man Utd",
            "teamColours": "#a81507",
          },
          "theme": Object {
            "primary": "#000000",
            "secondary": "#ffffff",
          },
          "yes": "Tap/Click for 'Yes'",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Unknown
            className="ttt-intro-screen"
            headline="Transfer Top Trumps"
            introCopy="Choose the players you would like your club to sign"
            introHeadline="How to play"
            no="Tap/Click for 'No'"
            onStartGame={[Function]}
            playBtn="Play now"
            subHeadline="Who will you choose?"
            targetClub={
              Object {
                "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
                "id": "man-utd",
                "name": "Man Utd",
                "teamColours": "#a81507",
              }
            }
            theme={
              Object {
                "primary": "#000000",
                "secondary": "#ffffff",
              }
            }
            yes="Tap/Click for 'Yes'"
          />,
          false,
          false,
        ],
        "className": "ttt-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "ttt-intro-screen",
            "headline": "Transfer Top Trumps",
            "introCopy": "Choose the players you would like your club to sign",
            "introHeadline": "How to play",
            "no": "Tap/Click for 'No'",
            "onStartGame": [Function],
            "playBtn": "Play now",
            "subHeadline": "Who will you choose?",
            "targetClub": Object {
              "badge": "https://www.thesun.co.uk/wp-content/uploads/2018/07/manutd_@2x.png",
              "id": "man-utd",
              "name": "Man Utd",
              "teamColours": "#a81507",
            },
            "theme": Object {
              "primary": "#000000",
              "secondary": "#ffffff",
            },
            "yes": "Tap/Click for 'Yes'",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
